Use lightline for the tabline, too.

--- a/tmux/gruvbox_dark_theme.conf
+++ b/tmux/gruvbox_dark_theme.conf
@@ -1,22 +1,22 @@
-# Based on: https://github.com/morhetz/gruvbox
+# based on: https://github.com/morhetz/gruvbox
 # colour0: black
 # #3c3836: grey
 # #a89984: muddy white
 # #7c6f64: unemphasized white
 # #665c54: split color
 
-# Active status bar
+# active status bar
 setw window-status-current-bg '#a89984'
 setw window-status-current-fg colour0
 setw window-status-current-attr bold
-# Inactive status bar
+# inactive status bar
 set status-bg '#3c3836'
 set status-fg '#7c6f64'
 
-# Active panes
+# active panes
 set pane-active-border-bg colour0
 set pane-active-border-fg '#665c54'
-# Inactive panes
+# inactive panes
 set pane-border-bg colour0
 set pane-border-fg '#665c54'
 
