Spice up the tmux status line.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -82,8 +82,11 @@ bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # Status bar
 set -g clock-mode-style 24
-set -g status-left ""
-set -g status-right "%m-%d-%y %H:%M "
+set -g status-left "#[fg=blue,bold] « #S » "
+set -g status-left-length 32 # maximum width
+set -g status-right "%a %H:%M %m-%d-%y "
+set -g window-status-format " #I:#W "
+set -g window-status-current-format " #I:#W "
 
 # Colors
 set-hook -g after-new-session "source-file ~/dotfiles/tmux/apply_theme.conf"
