--- a/tmux/gruvbox_dark_theme.conf
+++ b/tmux/gruvbox_dark_theme.conf
@@ -1,5 +1,5 @@
 # based on: https://github.com/morhetz/gruvbox
-# colour0: black
+# #282828: black (medium contrast)
 # #3c3836: grey
 # #a89984: muddy white
 # #7c6f64: unemphasized white
@@ -7,25 +7,25 @@
 
 # active status bar
 setw window-status-current-bg '#a89984'
-setw window-status-current-fg colour0
+setw window-status-current-fg '#282828'
 setw window-status-current-attr bold
 # inactive status bar
 set status-bg '#3c3836'
 set status-fg '#7c6f64'
 
 # active panes
-set pane-active-border-bg colour0
+set pane-active-border-bg '#282828'
 set pane-active-border-fg '#665c54'
 # inactive panes
-set pane-border-bg colour0
+set pane-border-bg '#282828'
 set pane-border-fg '#665c54'
 
 # prefix + :
 set message-bg '#a89984'
-set message-fg colour0
+set message-fg '#282828'
 set message-attr bold
 
 # prefix + w
 set mode-bg '#a89984'
-set mode-fg colour0
+set mode-fg '#282828'
 set mode-attr bold
