--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,7 +16,7 @@ set -g default-shell $SHELL
 # Set 256 color support.
 # Matches $TERM.
 set -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 # Act like GNU Screen.
 set -g prefix C-a
@@ -89,5 +89,6 @@ set -g window-status-format " #I:#W "
 set -g window-status-current-format " #I:#W "
 
 # Colors
+# Looks at ITERM_PROFILE to pick the correct colorscheme.
 set-hook -g after-new-session "source-file ~/dotfiles/tmux/apply_theme.conf"
 set-hook -g after-new-window "source-file ~/dotfiles/tmux/apply_theme.conf"
