--- a/tmux/gruvbox_dark_theme.conf
+++ b/tmux/gruvbox_dark_theme.conf
@@ -1,5 +1,5 @@
 # based on: https://github.com/morhetz/gruvbox
-# #282828: black (medium contrast)
+# #282828: black (medium contrast background)
 # #3c3836: grey
 # #a89984: muddy white
 # #7c6f64: unemphasized white
@@ -14,10 +14,10 @@ set status-bg '#3c3836'
 set status-fg '#7c6f64'
 
 # active panes
-set pane-active-border-bg '#282828'
+set pane-active-border-bg default
 set pane-active-border-fg '#665c54'
 # inactive panes
-set pane-border-bg '#282828'
+set pane-border-bg default
 set pane-border-fg '#665c54'
 
 # prefix + :
