tmux: Faster session and window renaming.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,7 +32,7 @@ set -g history-limit 50000
 # Allows for faster key repetition.
 set -g escape-time 0
 
-# Start numbering at 1.
+# Start status bar numbering at 1.
 set -g base-index 1
 
 # Rename windows based on what's running in them.
@@ -79,6 +79,10 @@ bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+# Don't display the original name when renaming. Makes renaming faster.
+bind , command-prompt -p "(rename-window '#W')" "rename-window '%%'"
+bind '$' command-prompt -p "(rename-session '#S')" "rename-session '%%'"
 
 # Status bar
 set -g clock-mode-style 24
