--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,9 +58,9 @@ bind-key -T copy-mode-vi 'V' send -X select-line
 bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
-# Use PREFIX h and PREFIX l to cycle through windows.
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
+# Disable confirmation prompt before killing windows and panes.
+bind-key & kill-window
+bind-key x kill-pane
 
 # Resize panes using PREFIX H, J, K, L
 bind-key -r H resize-pane -L 5
