--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -62,6 +62,9 @@ bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -in -selection 
 bind-key & kill-window
 bind-key x kill-pane
 
+# Always list windows in the top left corner.
+bind-key w select-pane -t 0 \; choose-window
+
 # Resize panes using PREFIX H, J, K, L
 bind-key -r H resize-pane -L 5
 bind-key -r J resize-pane -D 5
@@ -81,8 +84,8 @@ bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # Don't display the original name when renaming. Makes renaming faster.
-bind , command-prompt -p "(rename-window '#W')" "rename-window '%%'"
-bind '$' command-prompt -p "(rename-session '#S')" "rename-session '%%'"
+bind-key , command-prompt -p "(rename-window '#W')" "rename-window '%%'"
+bind-key '$' command-prompt -p "(rename-session '#S')" "rename-session '%%'"
 
 # Status bar
 set -g clock-mode-style 24
