--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -92,8 +92,8 @@ set -g clock-mode-style 24
 set -g status-left "#[fg=blue,bold] « #S » "
 set -g status-left-length 32 # maximum width
 set -g status-right "%a %H:%M %m-%d-%y "
-set -g window-status-format " #I:#W "
-set -g window-status-current-format " #I:#W "
+set -g window-status-format " #I:#W#{?window_zoomed_flag, [Z],} "
+set -g window-status-current-format " #I:#W#{?window_zoomed_flag, [Z],} "
 
 # Colors
 # Looks at ITERM_PROFILE to pick the correct colorscheme.
