--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -87,6 +87,12 @@ bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 bind-key , command-prompt -p "(rename-window '#W')" "rename-window '%%'"
 bind-key '$' command-prompt -p "(rename-session '#S')" "rename-session '%%'"
 
+# Create new split/window with the current directory.
+# https://unix.stackexchange.com/a/12091
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+
 # Status bar
 set -g clock-mode-style 24
 set -g status-left "#[fg=blue,bold] « #S » "
