tmux: Add shortcut to toggle synchronize-panes.

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -89,9 +89,12 @@ bind-key '$' command-prompt -p "(rename-session '#S')" "rename-session '%%'"
 
 # Create new split/window with the current directory.
 # https://unix.stackexchange.com/a/12091
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-bind c new-window -c "#{pane_current_path}"
+bind-key '"' split-window -c "#{pane_current_path}"
+bind-key % split-window -h -c "#{pane_current_path}"
+bind-key c new-window -c "#{pane_current_path}"
+
+# Shortcut to toggle synchronize-panes.
+bind-key s set-window-option synchronize-panes
 
 # Status bar
 set -g clock-mode-style 24
