--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -89,8 +89,8 @@ bind-key '$' command-prompt -p "(rename-session '#S')" "rename-session '%%'"
 
 # Create new split/window with the current directory.
 # https://unix.stackexchange.com/a/12091
-bind-key '"' split-window -c "#{pane_current_path}"
-bind-key % split-window -h -c "#{pane_current_path}"
+bind-key '"' split-window -p 50 -c "#{pane_current_path}"
+bind-key % split-window -h -p 50 -c "#{pane_current_path}"
 bind-key c new-window -c "#{pane_current_path}"
 
 # Shortcut to toggle synchronize-panes.
