tmux: status line color tweaks

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -98,7 +98,7 @@ bind-key s set-window-option synchronize-panes
 
 # Status bar
 set -g clock-mode-style 24
-set -g status-left "#[fg=blue,bold] « #S » "
+set -g status-left "#[fg=magenta,bold] « #[fg=blue,bold]#S #[fg=magenta,bold]» "
 set -g status-left-length 32 # maximum width
 set -g status-right "%a %H:%M %m-%d-%y "
 set -g window-status-format " #I:#W#{?window_zoomed_flag, [Z],} "
