Add Gruvbox Light theme.

--- a/tmux/apply_theme.conf
+++ b/tmux/apply_theme.conf
@@ -1,1 +1,2 @@
 if-shell '[[ $ITERM_PROFILE = "Gruvbox Dark" ]]' "source-file ~/dotfiles/tmux/gruvbox_dark_theme.conf"
+if-shell '[[ $ITERM_PROFILE = "Gruvbox Light" ]]' "source-file ~/dotfiles/tmux/gruvbox_light_theme.conf"
