tmux: Update bu_light1 color.

--- a/tmux/gruvbox_dark_theme.conf
+++ b/tmux/gruvbox_dark_theme.conf
@@ -1,9 +1,9 @@
 # based on: https://github.com/ustasb/gruvbox
-# #282828: black (dark0)
-# #3c3836: grey (dark1)
-# #a89984: muddy white (light4)
-# #7c6f64: unemphasized white (dark4)
-# #665c54: split color (dark3)
+# #282828: dark0
+# #3c3836: dark1
+# #a89984: light4
+# #7c6f64: dark4
+# #665c54: dark3
 
 # active status bar
 setw window-status-current-bg '#a89984'
