--- a/tmux/gruvbox_light_theme.conf
+++ b/tmux/gruvbox_light_theme.conf
@@ -1,16 +1,16 @@
 # based on: https://github.com/ustasb/gruvbox
-# #fdf6e3: black (bu_light0_hard)
-# #ebe4d2: grey (bu_light1)
-# #7c6f64: muddy white (dark4)
-# #a89984: unemphasized white (light4)
-# #bdae93: split color (light3)
+# #fdf6e3: bu_light0_hard
+# #e9e2d1: bu_light1
+# #7c6f64: dark4
+# #a89984: light4
+# #bdae93: light3
 
 # active status bar
 setw window-status-current-bg '#7c6f64'
 setw window-status-current-fg '#fdf6e3'
 setw window-status-current-attr bold
 # inactive status bar
-set status-bg '#ebe4d2'
+set status-bg '#e9e2d1'
 set status-fg '#a89984'
 
 # active panes
