tmux: Window options need to be applied globally.
Color artifacts without.

--- a/tmux/gruvbox_dark_theme.conf
+++ b/tmux/gruvbox_dark_theme.conf
@@ -6,9 +6,9 @@
 # #665c54: dark3
 
 # active status bar
-setw window-status-current-bg '#a89984'
-setw window-status-current-fg '#282828'
-setw window-status-current-attr bold
+setw -g window-status-current-bg '#a89984'
+setw -g window-status-current-fg '#282828'
+setw -g window-status-current-attr bold
 # inactive status bar
 set status-bg '#3c3836'
 set status-fg '#7c6f64'
