--- a/tmux/gruvbox_light_theme.conf
+++ b/tmux/gruvbox_light_theme.conf
@@ -6,9 +6,9 @@
 # #bdae93: light3
 
 # active status bar
-setw window-status-current-bg '#7c6f64'
-setw window-status-current-fg '#fdf6e3'
-setw window-status-current-attr bold
+setw -g window-status-current-bg '#7c6f64'
+setw -g window-status-current-fg '#fdf6e3'
+setw -g window-status-current-attr bold
 # inactive status bar
 set status-bg '#e9e2d1'
 set status-fg '#a89984'
