tmux: Make all color changes global to reduce artifacts.

--- a/tmux/gruvbox_dark_theme.conf
+++ b/tmux/gruvbox_dark_theme.conf
@@ -6,26 +6,26 @@
 # #665c54: dark3
 
 # active status bar
-setw -g window-status-current-bg '#a89984'
-setw -g window-status-current-fg '#282828'
-setw -g window-status-current-attr bold
+set -g window-status-current-bg '#a89984'
+set -g window-status-current-fg '#282828'
+set -g window-status-current-attr bold
 # inactive status bar
-set status-bg '#3c3836'
-set status-fg '#7c6f64'
+set -g status-bg '#3c3836'
+set -g status-fg '#7c6f64'
 
 # active panes
-set pane-active-border-bg default
-set pane-active-border-fg '#665c54'
+set -g pane-active-border-bg default
+set -g pane-active-border-fg '#665c54'
 # inactive panes
-set pane-border-bg default
-set pane-border-fg '#665c54'
+set -g pane-border-bg default
+set -g pane-border-fg '#665c54'
 
 # prefix + :
-set message-bg '#a89984'
-set message-fg '#282828'
-set message-attr bold
+set -g message-bg '#a89984'
+set -g message-fg '#282828'
+set -g message-attr bold
 
 # prefix + w
-set mode-bg '#a89984'
-set mode-fg '#282828'
-set mode-attr bold
+set -g mode-bg '#a89984'
+set -g mode-fg '#282828'
+set -g mode-attr bold
