--- a/tmux/gruvbox_light_theme.conf
+++ b/tmux/gruvbox_light_theme.conf
@@ -6,26 +6,26 @@
 # #bdae93: light3
 
 # active status bar
-setw -g window-status-current-bg '#7c6f64'
-setw -g window-status-current-fg '#fdf6e3'
-setw -g window-status-current-attr bold
+set -g window-status-current-bg '#7c6f64'
+set -g window-status-current-fg '#fdf6e3'
+set -g window-status-current-attr bold
 # inactive status bar
-set status-bg '#e9e2d1'
-set status-fg '#a89984'
+set -g status-bg '#e9e2d1'
+set -g status-fg '#a89984'
 
 # active panes
-set pane-active-border-bg default
-set pane-active-border-fg '#bdae93'
+set -g pane-active-border-bg default
+set -g pane-active-border-fg '#bdae93'
 # inactive panes
-set pane-border-bg default
-set pane-border-fg '#bdae93'
+set -g pane-border-bg default
+set -g pane-border-fg '#bdae93'
 
 # prefix + :
-set message-bg '#7c6f64'
-set message-fg '#fdf6e3'
-set message-attr bold
+set -g message-bg '#7c6f64'
+set -g message-fg '#fdf6e3'
+set -g message-attr bold
 
 # prefix + w
-set mode-bg '#7c6f64'
-set mode-fg '#fdf6e3'
-set mode-attr bold
+set -g mode-bg '#7c6f64'
+set -g mode-fg '#fdf6e3'
+set -g mode-attr bold
