remove reattach-to-user-namespace
No longer needed: https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/issues/66

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,14 +1,5 @@
 # Brian Ustas's .tmux.conf
-#
 # Tested on OS X.
-#
-# Expected installs:
-# - https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
-#   - Enables the clipboard on OS X
-#   - brew install reattach-to-user-namespace
-
-# Make the OS X clipboard work within tmux (ignored on Linux).
-set -g default-command "which reattach-to-user-namespace >/dev/null && reattach-to-user-namespace -l zsh || zsh"
 
 # Make zsh the default shell.
 set -g default-shell $SHELL
@@ -53,10 +44,11 @@ set -g status-keys emacs
 set -ga update-environment "ITERM_PROFILE"
 
 # Enter copy-mode with PREFIX [
-bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'V' send -X select-line
-bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
-bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+# To list all bindings: :list-keys -T copy-mode-vi
+setw -g mode-keys vi
+bind-key -T copy-mode-vi v   send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle \; send-keys -X begin-selection
+bind-key -T copy-mode-vi y   send-keys -X copy-selection-and-cancel
 
 # Disable confirmation prompt before killing windows and panes.
 bind-key & kill-window
