tmux: Allow quickly cycling through window layouts by tapping Space.

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -63,6 +63,9 @@ bind-key -r J resize-pane -D 5
 bind-key -r K resize-pane -U 5
 bind-key -r L resize-pane -R 5
 
+# Quickly cycle through window layouts.
+bind-key -r Space next-layout
+
 # Quickly reload .tmux.conf
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
