Remove Thyme pomodoro timer.
Didn't end up finding it useful.

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -95,8 +95,8 @@ bind-key s set-window-option synchronize-panes
 set -g clock-mode-style 24
 set -g status-left " #[fg=magenta,bold]« #[fg=blue,nobold]#S #[fg=magenta,bold]» "
 set -g status-left-length 32 # maximum width
-set -g status-right "%a %H:%M %m-%d-%y #(cat ~/.thyme-tmux)"
-set -g status-interval 1 # 1 second refresh intervals for thyme (pomodoro timer).
+set -g status-right "%a %H:%M %m-%d-%y "
+set -g status-interval 15
 set -g window-status-format " #I:#W#{?window_zoomed_flag, [Z],} "
 set -g window-status-current-format " #I:#W#{?window_zoomed_flag, [Z],} "
 
