--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -4,9 +4,9 @@
 # Make zsh the default shell.
 set -g default-shell $SHELL
 
-# Set 256 color support.
-# Matches $TERM.
-set -g default-terminal "xterm-256color"
+# Enable 256 color support.
+# https://github.com/neovim/neovim/issues/7353#issuecomment-334279343
+set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
 
 # Act like GNU Screen.
