coc.nvim: set triggerCompletionWait to 300

--- a/home/.config/nvim/coc-settings.json
+++ b/home/.config/nvim/coc-settings.json
@@ -5,6 +5,7 @@
   "coc.preferences.maxCompleteItemCount": 15,
   "coc.preferences.extensionUpdateCheck": "weekly",
   "coc.preferences.diagnostic.displayByAle": true,
+  "coc.preferences.triggerCompletionWait": 300,
 
   "css.enable": true,
   "json.enable": true,
