Update tmux color schemes for tmux 2.9.
https://github.com/tmux/tmux/issues/1689

--- a/tmux/gruvbox_dark_theme.conf
+++ b/tmux/gruvbox_dark_theme.conf
@@ -6,26 +6,17 @@
 # #665c54: dark3
 
 # active status bar
-set -g window-status-current-bg '#a89984'
-set -g window-status-current-fg '#282828'
-set -g window-status-current-attr bold
+set -g window-status-current-style bg='#a89984',fg='#282828',bold
 # inactive status bar
-set -g status-bg '#3c3836'
-set -g status-fg '#7c6f64'
+set -g status-style bg='#3c3836',fg='#7c6f64'
 
 # active panes
-set -g pane-active-border-bg default
-set -g pane-active-border-fg '#665c54'
+set -g pane-active-border-style bg=default,fg='#665c54'
 # inactive panes
-set -g pane-border-bg default
-set -g pane-border-fg '#665c54'
+set -g pane-border-style bg=default,fg='#665c54'
 
 # prefix + :
-set -g message-bg '#a89984'
-set -g message-fg '#282828'
-set -g message-attr bold
+set -g message-style bg='#a89984',fg='#282828',bold
 
 # prefix + w
-set -g mode-bg '#a89984'
-set -g mode-fg '#282828'
-set -g mode-attr bold
+set -g mode-style bg='#a89984',fg='#282828',bold
