--- a/tmux/gruvbox_light_theme.conf
+++ b/tmux/gruvbox_light_theme.conf
@@ -6,26 +6,17 @@
 # #bdae93: light3
 
 # active status bar
-set -g window-status-current-bg '#7c6f64'
-set -g window-status-current-fg '#fdf6e3'
-set -g window-status-current-attr bold
+set -g window-status-current-style bg='#7c6f64',fg='#fdf6e3',bold
 # inactive status bar
-set -g status-bg '#e9e2d1'
-set -g status-fg '#a89984'
+set -g status-style bg='#e9e2d1',fg='#a89984'
 
 # active panes
-set -g pane-active-border-bg default
-set -g pane-active-border-fg '#bdae93'
+set -g pane-active-border-style bg=default,fg='#bdae93'
 # inactive panes
-set -g pane-border-bg default
-set -g pane-border-fg '#bdae93'
+set -g pane-border-style bg=default,fg='#bdae93'
 
 # prefix + :
-set -g message-bg '#7c6f64'
-set -g message-fg '#fdf6e3'
-set -g message-attr bold
+set -g message-style bg='#7c6f64',fg='#fdf6e3',bold
 
 # prefix + w
-set -g mode-bg '#7c6f64'
-set -g mode-fg '#fdf6e3'
-set -g mode-attr bold
+set -g mode-style bg='#7c6f64',fg='#fdf6e3',bold
