--- a/home/.config/nvim/coc-settings.json
+++ b/home/.config/nvim/coc-settings.json
@@ -14,7 +14,9 @@
   "coc.source.ultisnips.enable": true,
   "solargraph.enable": true,
   "tsserver.enable": true,
+
   "eslint.enable": true,
+  "eslint.run": "onSave",
 
   "pyls.enable": true,
   "pyls.configurationSources": ["pycodestyle"],
