Don't show completion results automatically.

--- a/home/.config/nvim/coc-settings.json
+++ b/home/.config/nvim/coc-settings.json
@@ -1,6 +1,6 @@
 {
   "coc.preferences.timeout": 4000,
-  "coc.preferences.autoTrigger": "always",
+  "coc.preferences.autoTrigger": "none",
   "coc.preferences.minTriggerInputLength": 2,
   "coc.preferences.maxCompleteItemCount": 15,
   "coc.preferences.extensionUpdateCheck": "weekly",
