--- a/home/.config/nvim/coc-settings.json
+++ b/home/.config/nvim/coc-settings.json
@@ -18,7 +18,7 @@
   "eslint.enable": true,
   "eslint.run": "onSave",
 
-  "pyls.enable": true,
-  "pyls.configurationSources": ["pycodestyle"],
-  "pyls.plugins.pycodestyle.maxLineLength": 100
+  "python.jediEnabled": true,
+  "python.linting.enabled": true,
+  "python.linting.lintOnSave": true
 }
