coc.nvim: enable SolarGraph formatting

--- a/home/.config/nvim/coc-settings.json
+++ b/home/.config/nvim/coc-settings.json
@@ -39,6 +39,7 @@
   "solargraph.completion": true,
   "solargraph.checkGemVersion": false,
   "solargraph.diagnostics": true,
+  "solargraph.formatting": true,
   "solargraph.autoformat": false,
 
   // JavaScript
