--- a/home/.config/nvim/coc-settings.json
+++ b/home/.config/nvim/coc-settings.json
@@ -47,6 +47,10 @@
   // https://github.com/neoclide/coc-eslint
   "tsserver.enable": true,
   "tsserver.enableJavascript": true,
+  "typescript.suggest.enabled": false, // Disable linting (https://github.com/neoclide/coc-tsserver/issues/12)
+  "typescript.valided.enable": false, // ^^
+  "javascript.suggest.enabled": false, // ^^
+  "javascript.valided.enable": false, // ^^
   "eslint.enable": true,
   "eslint.autoFix": true,
   "eslint.autoFixOnSave": false,
@@ -82,6 +86,7 @@
 
   // misc
   "css.enable": true,
+  "css.validate": false,  // using Stylelint instead
   "json.enable": true,
   "coc.source.dictionary.enable": true,
   "coc.source.tag.enable": true,
