--- a/home/.config/nvim/coc-settings.json
+++ b/home/.config/nvim/coc-settings.json
@@ -53,7 +53,7 @@
   "javascript.suggest.enabled": false, // ^^
   "javascript.validate.enable": false, // ^^
   "eslint.enable": true,
-  "eslint.autoFix": false, // Let ALE fix files via :Fix.
+  "eslint.autoFix": true,
   "eslint.autoFixOnSave": false,
 
   // Python (via Conda)
