Git fix for: https://stackoverflow.com/q/62653114/1575238

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -34,3 +34,5 @@
 	old = red bold
 	new = green bold
 	whitespace = red reverse
+[pull]
+	ff = only # addresses https://stackoverflow.com/a/62653694/1575238
