tmux: Add `set focus-events on` for Vim's :healthcheck

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -9,6 +9,9 @@ set -g default-shell $SHELL
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
 
+# For Neovim (advised after running :checkhealth in Vim)
+set -g focus-events on
+
 # Act like GNU Screen.
 set -g prefix C-a
 unbind-key C-b
