Tailwind: Don't don't Headwind upon file save.

--- a/home/.config/nvim/coc-settings.json
+++ b/home/.config/nvim/coc-settings.json
@@ -92,5 +92,7 @@
   "json.enable": true,
   "coc.source.dictionary.enable": true,
   "coc.source.tag.enable": true,
-  "coc.source.ultisnips.enable": true
+  "coc.source.ultisnips.enable": true,
+
+  "tailwindCSS.headwind.runOnSave": false
 }
