Update GPG settings.
- Stop using Yubikey and gpg-agent for SSH.
- Set new GPG key.
- Rely on GPG defaults.

--- a/home/.gnupg/gpg-agent.conf
+++ b/home/.gnupg/gpg-agent.conf
@@ -1,7 +1,6 @@
-# SSH with my authentication subkey.
-enable-ssh-support
-
 # brew install pinentry
+# Using pinentry-mac means that $GPG_TTY doesn't need to be set
+# as a GUI will be used for pin entry instead of the active terminal (GPG_TTY).
 pinentry-program /usr/local/bin/pinentry-mac
 
 # Misc
