--- a/home/.gnupg/gpg.conf
+++ b/home/.gnupg/gpg.conf
@@ -4,24 +4,10 @@ no-comments
 use-agent
 
 # Brian's key
-default-key 29665D8F7D3C4961
+default-key 0x749A4CFC66D0D9B3
 
 # Long format
 keyid-format 0xlong
 
 # Pretty-print key fingerprints.
 with-fingerprint
-
-# Solves https://github.com/jamessan/vim-gnupg/issues/42
-emit-version
-
-# Preferred algorithms
-personal-cipher-preferences AES256 AES192 AES CAST5
-personal-digest-preferences SHA512 SHA384 SHA256 SHA224
-cert-digest-algo SHA512
-default-preference-list SHA512 SHA384 SHA256 SHA224 AES256 AES192 AES CAST5 ZLIB BZIP2 ZIP Uncompressed
-
-# Misc
-fixed-list-mode
-list-options show-uid-validity
-verify-options show-uid-validity
